:recycle: Refactor: UserConverter